--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,6 +1,59 @@
 .Home{
-    background-image: linear-gradient(to top, #4e4e4ebd,#5f5f5f17 ),url(../assets/Background.jpg);
+    background-image: linear-gradient(to top, #4e4e4ebd,#5f5f5f25 ),url(../assets/Background.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 89.1vh;
+    background-position:20% 20%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items:center;
+    flex-direction: column;
+}
+
+h1{
+    font-size: 64px;
+    color: white;
+    font-weight: 1;
+}
+
+p{
+    color: white;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 100%;
+    max-width: 400px;
+    font-size: 18px;
+    font-weight: 600;
+    text-align: center;
+    margin-bottom: 2vh;
+}
+
+input{
+    background-color:rgb(238, 238, 238) ;
+    width: 28rem;
+    height: 6vh;
+    padding-left:10px;
+    font-size: 16px;
+    outline: none;
+    border: none;
+    border-radius: 8px;
+}
+
+.SearchBar{
+    margin-top: 3vh;
+    display: flex;
+}
+
+button {
+    background-color:rgb(238, 238, 238) ;
+    border: none;
+    border-radius:6px;
+    height: 6vh;
+    width: 10rem;
+    cursor: pointer;
+    font-size: 16px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+span{
+    color: rgb(255, 221, 173);
 }
