--- a/src/pages/Nav.css
+++ b/src/pages/Nav.css
@@ -4,11 +4,13 @@
     box-sizing: border-box;
 }
 
-nav{
+.nav_bar{
     display: flex;
     justify-content: space-between;
-    padding:16px ;
+    padding: 16px 16px 10px 16px;
     background-color: rgb(255, 253, 251);
+    box-shadow: 0 0 20px 4px black;
+
 }
 
 .logo{
@@ -35,9 +37,7 @@ nav{
 .Nav_SearchBar{
     display: flex;
     align-items: center;
-    background-color: black;
     border-radius: 8px;
-    background-color: rgb(238, 238, 238);
 }
 
 .SearchBox{
@@ -48,15 +48,18 @@ nav{
     max-width: 280px;
     height: 5vh;
     border-radius: 8px 0 0 8px;
-    padding: 12px;
+    padding-left: 10px;
     font-size: 14px;
 }
 
 .SearchLogo{
     background-color: rgb(238, 238, 238);
-    width: 1vw;
-    height: 2vw;
-    font-size: 5px;
+    width: 4vw;
+    height: 5vh;
+    border-radius: 0 8px 8px 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     border: none;
     cursor: pointer;
     color: black;
