--- a/src/pages/Results.css
+++ b/src/pages/Results.css
@@ -1,21 +1,27 @@
 .Container{
     background-image: url(../assets/WoodWallpaper.jpg);
     background-size: cover;
-    height: 100vh;
+    background-repeat:no-repeat;
+    min-height: 100vh;
     padding:14vh 0 0 4vh;
+    display: flex;
+    justify-content: center;
+    align-items:flex-start;
+    flex-wrap: wrap;
 }
 
 .Food_Container{
     background-color: antiquewhite;
     width: 100%;
-    max-width:14rem;
- 
+    max-width:18rem;
+    height: 18rem;
     padding: 14px;
     border-radius: 16px;
+    margin:10px 10px;
 }
 .Food_Image img{
     object-fit: cover;
     width: 100%;
     border-radius: 16px;
-    height: 30vh;
+    height: 36vh;
 }
