--- a/src/pages/Results.css
+++ b/src/pages/Results.css
@@ -3,25 +3,48 @@
     background-size: cover;
     background-repeat:no-repeat;
     min-height: 100vh;
-    padding:14vh 0 0 4vh;
-    display: flex;
-    justify-content: center;
-    align-items:flex-start;
+    height: 100%;
+    padding:16vh 0 0 6vh;
+    justify-content: flex-start;
+    align-items:center;
     flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(16rem, 1fr));
+    gap: 1rem;
+
 }
 
-.Food_Container{
+.Food_Container {
     background-color: antiquewhite;
     width: 100%;
-    max-width:18rem;
-    height: 18rem;
-    padding: 14px;
+    max-width: 18rem;
+    min-height: 10vh;
+    max-height: 50vh;
+    height: 100%;
+    padding: 1rem;
+    margin-bottom: 1rem;
     border-radius: 16px;
-    margin:10px 10px;
-}
+    cursor: pointer; 
+  }
+  
+
 .Food_Image img{
     object-fit: cover;
     width: 100%;
     border-radius: 16px;
     height: 36vh;
 }
+.SmallDescription{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    max-width: fit-content;
+    height: 100%;
+    min-height: 2.6rem;
+    max-height: 4.6rem;
+    font-size: 14px;
+    line-height: 1.3rem;
+    text-align: center;
+}
+
