--- a/src/pages/Description.css
+++ b/src/pages/Description.css
@@ -8,13 +8,56 @@
     background-size: cover;
     background-repeat:no-repeat;
     min-height: 100vh;
+    display: block;
+    justify-content: center;
+    align-items: center;
+    padding: 10% 10%;
+}
+
+.Container_Up{
+    padding: 2% 0;
+    background-color: rgb(255, 254, 246);
+    display: block;
+    justify-content: center;
+    align-items: center;
+    border-radius: 8px;
+}
+.titleFood{
+    color: rgb(0, 0, 0);
+    font-size: 36px;
+    text-shadow: 2px 2px 2px #ffffff;
+    text-align: center;
+}
+
+.row{
+    display: flex;
+    justify-content: space-around;
+}
+
+.FoodImg{
+        margin: 1rem;
+        width: 100%;
+        max-width: 18rem;
+        border-radius: 4px;
+        border: 3px solid rgb(255, 214, 156);
+        box-shadow: 10px 10px #5f584294;
+        margin-left: 2rem;
+}
+
+.Container_Down{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-direction: column;
+    background-color: rgb(255, 254, 246);
+    box-shadow: 10px 10px #383428;
+    border-radius: 4px;
+    width: 100%;
+    max-width: 32rem;
+    margin:12% 0 0 40% ;
 }
-.titleFood{
-    padding: 100px;
-    color: white;
-    font-size: 36px;
-    text-shadow: 2px 2px 2px #000000;
+
+.Instruction{
+    color: black;
+    text-align: left;
 }
