--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -16,7 +16,7 @@ h1{
     font-weight: 1;
 }
 
-p{
+.Description__Home{
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
