--- a/src/pages/Description.css
+++ b/src/pages/Description.css
@@ -18,9 +18,9 @@
     padding: 2% 0;
     background-color: rgb(255, 254, 246);
     display: block;
-    justify-content: center;
     align-items: center;
-    border-radius: 8px;
+    border-radius: 8px 8px 0 0;
+    box-shadow: 10px 10px #383428;
 }
 .titleFood{
     color: rgb(0, 0, 0);
@@ -30,34 +30,47 @@
 }
 
 .row{
+    margin: 1rem 0;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
+}
+
+.Ingredients{
+    margin-top: 0.8rem;
+    margin-right: 12rem;
 }
 
 .FoodImg{
-        margin: 1rem;
+        margin: 1rem 1rem 1rem 3rem;
         width: 100%;
         max-width: 18rem;
         border-radius: 4px;
         border: 3px solid rgb(255, 214, 156);
         box-shadow: 10px 10px #5f584294;
-        margin-left: 2rem;
+        
 }
 
 .Container_Down{
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
     background-color: rgb(255, 254, 246);
     box-shadow: 10px 10px #383428;
-    border-radius: 4px;
     width: 100%;
-    max-width: 32rem;
-    margin:12% 0 0 40% ;
+    max-width: 100rem;
+    padding-bottom: 2rem;
+}
+
+h3{
+    text-align: center;
+    font-size: 32px;
+    font-weight: 100;
 }
 
 .Instruction{
     color: black;
-    text-align: left;
+    width: 90%;
+    text-align: center;
+    font-size: 18px;
+    margin: auto;
 }
