--- a/src/pages/Description.css
+++ b/src/pages/Description.css
@@ -11,7 +11,7 @@
     display: block;
     justify-content: center;
     align-items: center;
-    padding: 10% 10%;
+    padding: 10% ;
 }
 
 .Container_Up{
@@ -33,21 +33,34 @@
     margin: 1rem 0;
     display: flex;
     justify-content: space-between;
+    align-items: center;
 }
 
 .Ingredients{
     margin-top: 0.8rem;
-    margin-right: 12rem;
+    /* margin-right: 12rem; */
 }
 
 .FoodImg{
-        margin: 1rem 1rem 1rem 3rem;
+        margin: 1rem 1rem 1rem 1rem;
         width: 100%;
         max-width: 18rem;
+        max-height: 18rem;
         border-radius: 4px;
         border: 3px solid rgb(255, 214, 156);
         box-shadow: 10px 10px #5f584294;
+        object-fit: cover;
         
+}
+
+
+.IngredientsTitle{
+    font-size: 26px
+}
+
+li{
+    margin-left: 2vw;
+    font-size: 20px;
 }
 
 .Container_Down{
@@ -73,4 +86,22 @@ h3{
     text-align: center;
     font-size: 20px;
     margin: auto;
+}
+
+@media(max-width:460px){
+    .ContainerDescription{
+        padding-top: 20%;
+    }
+    .row{
+        display: block;
+    }
+    .FoodImg{
+        margin: 0;
+        margin-left: 2.5rem;
+        width: 10rem;
+    }
+    .Ingredients{
+        margin-left: 30%;
+        width: 2rem;
+    }
 }
