--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -11,12 +11,18 @@
 }
 
 h1{
+    width: 100%;
+    max-height: 20rem;
     font-size: 64px;
     color: white;
     font-weight: 1;
+    text-align: center;
 }
 
 .Description__Home{
+    width: 100%;
+    max-width: 20rem;
+    text-align: center;
     color: white;
     font-family: Arial, Helvetica, sans-serif;
     width: 100%;
@@ -56,4 +62,15 @@ button {
 
 span{
     color: rgb(255, 221, 173);
+}
+
+@media (max-width:460px){
+    input{
+        width: 20rem;
+        height: 2.5rem;
+    }
+    button{
+        height: 3rem;
+        font-size: 18px;
+    }
 }
