--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
+
 .Home{
     background-image: linear-gradient(to top, #4e4e4ebd,#5f5f5f25 ),url(../assets/Background.jpg);
     background-size: cover;
@@ -17,6 +21,8 @@ h1{
     color: white;
     font-weight: 1;
     text-align: center;
+    font-family: 'Playfair Display', serif;
+    margin-bottom: 0.6rem;
 }
 
 .Description__Home{
@@ -57,7 +63,8 @@ button {
     width: 8rem;
     cursor: pointer;
     font-size: 16px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
+
 }
 
 span{
