--- a/src/pages/Results.css
+++ b/src/pages/Results.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+
 *{
     text-decoration: none;
+    
+
 }
 .Container{
     background-image: url(../assets/WoodWallpaper.jpg);
@@ -46,9 +50,12 @@
     height: 100%;
     min-height: 2.6rem;
     max-height: 4.6rem;
-    font-size: 14px;
+    font-size: 12px;
     line-height: 1.3rem;
     text-align: center;
     color: black;
+    font-family: 'Poppins', sans-serif;
 }
+
+
 
